--- a/The_Resolution.html
+++ b/The_Resolution.html
@@ -11,13 +11,12 @@ that you've gotten through all of the ups and downs and have made it to
 here. Even if you aren't employed at the moment. Take pride in your skill, 
 persistence and marketability. And keep moving forward.
 
-And it looks like the Udacity instructors won't accept this one without you
-talking about what your goals are. So, coming out of this curriculum I want to 
+So, coming out of this curriculum I want to 
 be able to make slick and responsive web applications. I don't just want 
 something functional. I want something that <i>looks good</i> as well. That way 
 the seeds will be sown and I can have a good foundational knowledge before I 
 move into the wild jungle of server side development. I'd like to be able to 
 take a mockup and translate that into a webpage whip-it quick. And as I mentioned
-above, everything I develop should be done with mobile-first in mind. If you've 
+above, everything I develop should be done with a mobile-first mindset. If you've 
 done these things by the end of the course, consider another large leap in turning
 your whole career around.
